--- a/dubbo-test/pom.xml
+++ b/dubbo-test/pom.xml
@@ -40,5 +40,13 @@
   <properties>
     <skip_maven_deploy>true</skip_maven_deploy>
   </properties>
+  <dependencies>
+    <dependency>
+      <groupId>org.apache.dubbo</groupId>
+      <artifactId>dubbo-rpc-api</artifactId>
+      <version>3.3.0-beta.2</version>
+      <scope>compile</scope>
+    </dependency>
+  </dependencies>
 
 </project>
