暂时对router解读

--- a/dubbo-demo/dubbo-demo-spring-boot/dubbo-demo-spring-boot-consumer/pom.xml
+++ b/dubbo-demo/dubbo-demo-spring-boot/dubbo-demo-spring-boot-consumer/pom.xml
@@ -34,6 +34,12 @@
     <dependency>
       <groupId>org.apache.dubbo</groupId>
       <artifactId>dubbo-demo-spring-boot-interface</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.dubbo</groupId>
+      <artifactId>dubbo-cluster</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
 
