--- a/dubbo-demo/dubbo-demo-xds/dubbo-demo-xds-consumer/src/main/resources/application.yml
+++ b/dubbo-demo/dubbo-demo-xds/dubbo-demo-xds-consumer/src/main/resources/application.yml
@@ -27,6 +27,6 @@ dubbo:
     port: 50050
   registry:
 #    address: istio://istiod.istio-system.svc:15010?security=plaintext # istio://istiod.istio-system.svc:15012
-    address: xds://47.251.101.225:15010?security=plaintext # istio://istiod.istio-system.svc:15012
+    address: istio://47.251.101.225:15010?security=plaintext # istio://istiod.istio-system.svc:15012
 
 
