--- a/dubbo-demo/dubbo-demo-xds/dubbo-demo-xds-provider/src/main/resources/application.yml
+++ b/dubbo-demo/dubbo-demo-xds/dubbo-demo-xds-provider/src/main/resources/application.yml
@@ -26,4 +26,5 @@ dubbo:
     name: tri
     port: 50051
   registry:
-    address: istio://istiod.istio-system.svc:15010?security=plaintext # istio://istiod.istio-system.svc:15012
+#    address: istio://istiod.istio-system.svc:15010?security=plaintext # istio://istiod.istio-system.svc:15012
+    address: istio://47.251.101.225:15010?security=plaintext # istio://istiod.istio-system.svc:15012
