--- a/dubbo-rpc/pom.xml
+++ b/dubbo-rpc/pom.xml
@@ -39,11 +39,11 @@
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>org.apache.dubbo</groupId>
-      <artifactId>dubbo-test-check</artifactId>
-      <version>${project.parent.version}</version>
-      <scope>test</scope>
-    </dependency>
+    <!--    <dependency>-->
+    <!--      <groupId>org.apache.dubbo</groupId>-->
+    <!--      <artifactId>dubbo-test-check</artifactId>-->
+    <!--      <version>${project.parent.version}</version>-->
+    <!--      <scope>test</scope>-->
+    <!--    </dependency>-->
   </dependencies>
 </project>
